@@ -1,3 +1,9 @@
+2001-12-14 Alexander Rawass <alexannika@users.sourceforge.net>
+	
+	* a joystick axis can now have an 'inverse' attribute
+	* more fixes for parseCalike problem
+	
+	
 2001-12-13 Alexander Rawass <alexannika@users.sourceforge.net>
 
 	* fix for Patrick's parseCalike problem?
